<?xml version="1.0"?>
<package format="3">
  <name>orb_slam3_ros2</name>
  <version>0.0.1</version>
  <description>
    ORB_SLAM3: Open-source SLAM system for Monocular, Stereo, and RGB-D Cameras.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <author>Carlos Campos, Richard Elvira, Juan J. Gomez, Jose M.M. Montiel, Juan D. Tardos</author>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>